--- a/app/globals.css
+++ b/app/globals.css
@@ -89,3 +89,23 @@
     @apply bg-background text-foreground;
   }
 }
+
+.rdp {
+  --rdp-cell-size: 40px;
+  --rdp-accent-color: hsl(var(--primary));
+  --rdp-background-color: hsl(var(--primary));
+  margin: 1em;
+}
+
+.rdp-day_selected:not([disabled]) { 
+  color: hsl(var(--primary-foreground));
+  background-color: hsl(var(--primary));
+}
+
+.rdp-day_selected:hover:not([disabled]) {
+  background-color: hsl(var(--primary));
+}
+
+.rdp-day:hover:not([disabled]) {
+  background-color: hsl(var(--muted));
+}
